新增工具调用学习